dist/1.0/bin/sample/retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Christmas_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Benefits option. What is to be sent to this contact person as a form of benefit.</description>
        <inlineHelpText>Benefits option. What is to be sent to this contact person as a form of benefit.</inlineHelpText>
        <label>Christmas Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Specifies type of Contact.</description>
        <inlineHelpText>Specifies type of Contact.</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_from_Extranet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Contact has been created from Extranet</description>
        <inlineHelpText>Indicates if Contact has been created from Extranet</inlineHelpText>
        <label>Created from Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_OCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If marked means that this contact has been created in OC:TT.</description>
        <inlineHelpText>If marked means that this contact has been created in OC:TT.</inlineHelpText>
        <label>Created in OCTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniqueness of Email Address</description>
        <inlineHelpText>Uniqueness of Email Address</inlineHelpText>
        <label>Email Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExtranetCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Contact data has been sent to Extranet</description>
        <inlineHelpText>Indicates if Contact data has been sent to Extranet</inlineHelpText>
        <label>Created in Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtranetSynchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if contact is synchronized with Extranet</description>
        <inlineHelpText>Indicates if contact is synchronized with Extranet</inlineHelpText>
        <label>Synchronized with Extranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extranet_Role__c</fullName>
        <description>Defines User&apos;s Role for Extranet</description>
        <inlineHelpText>Defines User&apos;s Role for Extranet</inlineHelpText>
        <label>Extranet Role</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Admin User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Regular User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Regular User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Admin User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extranet_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Contact is also Extranet User</description>
        <inlineHelpText>Indicates if Contact is also Extranet User</inlineHelpText>
        <label>Extranet User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_ID__c</fullName>
        <description>Stores case insensitive ID (18 characters) of record.</description>
        <inlineHelpText>Stores case insensitive ID (18 characters) of record.</inlineHelpText>
        <label>Full ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greeting_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Benefits option. What is to be sent to this contact person as a form of benefit.</description>
        <inlineHelpText>Benefits option. What is to be sent to this contact person as a form of benefit.</inlineHelpText>
        <label>Greeting Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_No__c</fullName>
        <description>Identification Card Number for Partner Contacts</description>
        <inlineHelpText>Identification Card Number for Partner Contacts</inlineHelpText>
        <label>ID Card No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Stores information when this Contact has been last modified by integration.</description>
        <inlineHelpText>Stores information when this Contact has been last modified by integration.</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Contact__c</fullName>
        <description>Extranet User (SFDC Contact) which has modified record</description>
        <inlineHelpText>Extranet User (SFDC Contact) which has modified record</inlineHelpText>
        <label>Last Modified by Extranet Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Ext_Txt__c</fullName>
        <description>Extranet User (not represented in SFDC) which modified reord</description>
        <inlineHelpText>Extranet User (not represented in SFDC) which modified reord</inlineHelpText>
        <label>Last Modified by Extranet</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_OCTT__c</fullName>
        <description>This is direct link to open this contact in OC:TT system.</description>
        <formula>if(Created_in_OCTT__c, 
if( $Organization.Id=&apos;00D200000008d5u&apos;,HYPERLINK(&quot;https://occe.gtsce.com/occe2cat/person/efind/SFDC/&quot; &amp; Full_ID__c , &quot;Click here&quot;, &quot;_blank&quot;), 
HYPERLINK(&quot; https://demo.in.gtsgroup.cz/occe2cat/person/efind/SFDC/&quot; &amp; Full_ID__c , &quot;Click here&quot; , &quot;_blank&quot;)),&quot;&quot;)</formula>
        <inlineHelpText>This is direct link to open this contact in OC:TT system.</inlineHelpText>
        <label>Link to OCTT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Unique__c</fullName>
        <description>Field for verification of mobile phone number field&apos;s uniqueness;</description>
        <inlineHelpText>Techical field;</inlineHelpText>
        <label>Mobile Unique</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>Specifies in which language this contact prefer to communicate.</description>
        <inlineHelpText>Specifies in which language this contact prefer to communicate.</inlineHelpText>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romanian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines which contact is primary for an account</description>
        <inlineHelpText>Only one contact should be selected as primary for an account</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role for Account Relation</description>
        <inlineHelpText>Role for Account Relation</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Work</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>If this contact has been migrated or created from other system this filed is storing it&apos;s ID in original system.</description>
        <externalId>true</externalId>
        <inlineHelpText>If this contact has been migrated or created from other system this filed is storing it&apos;s ID in original system.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Determines status of Contact</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synchronization_Log__c</fullName>
        <description>Stores information about history of synchronization of this Contact with OC:TT system.</description>
        <inlineHelpText>Stores information about history of synchronization of this Contact with OC:TT system.</inlineHelpText>
        <label>Synchronization Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synchronized_with_OCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added during Colorado Sprint 2;</description>
        <label>Synchronized with OCTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validity_End_Date__c</fullName>
        <description>Validity End Date caluclated as Validity Start Date + Validity Period in months</description>
        <inlineHelpText>Validity End Date caluclated as Validity Start Date + Validity Period in months</inlineHelpText>
        <label>Validity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validity_Period_months__c</fullName>
        <description>Validity period for Power of Attorney</description>
        <inlineHelpText>Validity period for Power of Attorney</inlineHelpText>
        <label>Validity Period [months]</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validity_Start_Date__c</fullName>
        <description>Validity period start date for Power of Attorney document</description>
        <inlineHelpText>Validity period start date for Power of Attorney document</inlineHelpText>
        <label>Validity Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Extranet_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Extranet_User__c</columns>
        <columns>Extranet_Role__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Extranet_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Extranet Users</label>
    </listViews>
    <namedFilters>
        <fullName>Case_Contact</fullName>
        <active>true</active>
        <errorMessage>Contact&apos;s Account must match selected Account on the Case record.</errorMessage>
        <field>Case.ContactId</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Only Contacts from choosen Account are visible.</infoMessage>
        <isOptional>false</isOptional>
        <name>Case_Contact Name</name>
        <sourceObject>Case</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Lead_00N200000026MKoEAM</fullName>
        <active>true</active>
        <field>Lead.Partner_User__c</field>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Lead_Partner User</name>
        <sourceObject>Lead</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00N20000002hRS7EAM</fullName>
        <active>true</active>
        <field>Opportunity.Customer_Commercial_Contact__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_Customer Commercial Contact</name>
        <sourceObject>Opportunity</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>Opportunity_00N20000002hRSCEA2</fullName>
        <active>true</active>
        <field>Opportunity.Partner_User__c</field>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Opportunity_Partner User</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2000000069MqEAI_00N20000002hUWgEAM</fullName>
        <active>true</active>
        <field>ServiceBundle__c.Customer_Contact_outside_working_hours__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Service Bundle_Customer Contact outside</name>
        <sourceObject>ServiceBundle__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2000000069MqEAI_00N20000002hUWlEAM</fullName>
        <active>true</active>
        <field>ServiceBundle__c.Customer_Contact_in_working_hours__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Service Bundle_Customer Contact in worki</name>
        <sourceObject>ServiceBundle__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2000000069MqEAI_00N20000002hUWqEAM</fullName>
        <active>true</active>
        <field>ServiceBundle__c.Customer_Contact_in_an_emergency__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Service Bundle_Customer Contact in an em</name>
        <sourceObject>ServiceBundle__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2000000069MqEAI_00N20000002wsBNEAY</fullName>
        <active>true</active>
        <field>ServiceBundle__c.Customer_Contact_in_an_emergency_A__c</field>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Service Bundle_Customer Contact in an em</name>
        <sourceObject>ServiceBundle__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2000000069MqEAI_00N20000002wsC1EAI</fullName>
        <active>true</active>
        <field>ServiceBundle__c.Customer_Contact_in_working_hours_A__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Service Bundle_Customer Contact outside</name>
        <sourceObject>ServiceBundle__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I2000000069MqEAI_00N20000002wsCaEAI</fullName>
        <active>true</active>
        <field>ServiceBundle__c.Customer_Contact_outside_working_hours_A__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Service Bundle_Customer Contact outside</name>
        <sourceObject>ServiceBundle__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94iEAC_00N20000002hUJXEA2</fullName>
        <active>true</active>
        <field>OrderLine__c.Customer_Contact_in_working_hours__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Order Line_Customer Contact in working h</name>
        <sourceObject>OrderLine__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94iEAC_00N20000002hUKoEAM</fullName>
        <active>true</active>
        <field>OrderLine__c.Customer_Contact_in_an_emergency__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Order Line_Customer Contact in an emerge</name>
        <sourceObject>OrderLine__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94iEAC_00N20000002hULTEA2</fullName>
        <active>true</active>
        <field>OrderLine__c.Customer_Contact_outside_working_hours__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Line_Customer Contact outside work</name>
        <sourceObject>OrderLine__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94iEAC_00N20000002wsJMEAY</fullName>
        <active>true</active>
        <field>OrderLine__c.Customer_Contact_in_working_hours_A__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Line_Customer Contact in an emerge</name>
        <sourceObject>OrderLine__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000H94iEAC_00N20000002wsJREAY</fullName>
        <active>true</active>
        <field>OrderLine__c.Customer_Contact_outside_working_hours_A__c</field>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Line_Customer Contact outside work</name>
        <sourceObject>OrderLine__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000HEenEAG_00N20000002wY8DEAU</fullName>
        <active>true</active>
        <field>CContract__c.Partner_Signed_By__c</field>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Partner_Signing__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contract_Partner Signed By</name>
        <sourceObject>CContract__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000D7BPMA0_00NT00000018bgBMAQ</fullName>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <field>OrderLine__c.Suppliers_Contact__c</field>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <filterItems>
            <field>Contact.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Supplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Order Line_Supplier&apos;s Contact</name>
    </namedFilters>
    <validationRules>
        <fullName>Email_Phone_or_Mobile_required</fullName>
        <active>true</active>
        <description>for Contacts assigned to Company and Partner Accounts</description>
        <errorConditionFormula>IF ( 
	OR (
		CONTAINS( Account.RecordTypeId , &quot;01220000000LWct&quot; ), 
		CONTAINS( Account.RecordTypeId , &quot;01220000000LWcv&quot; ) 
	),

	AND (ISBLANK ( Email ), ISBLANK ( Phone ), ISBLANK ( MobilePhone ) ), 

False)</errorConditionFormula>
        <errorMessage>Either Phone or Mobile or Email field must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extranet_Role_Vs_Account</fullName>
        <active>false</active>
        <description>Validates if  selected role corresponds to related Account</description>
        <errorConditionFormula>((TEXT(Extranet_Role__c) = &quot;Customer Admin User&quot; || TEXT(Extranet_Role__c) = &quot;Customer Regular User&quot;) &amp;&amp; NOT(CONTAINS( Account.RecordTypeId,  &quot;01220000000LWct&quot;)) &amp;&amp;  NOT(CONTAINS( Account.RecordTypeId,  &quot;01220000000LX4P&quot;)))||
((TEXT(Extranet_Role__c) = &quot;Dealer Admin User&quot; || TEXT(Extranet_Role__c) = &quot;Dealer  Regular User&quot;) &amp;&amp; (NOT(CONTAINS( Account.RecordTypeId,  &quot;01220000000LWcv&quot;)) ||   Account.Dealer__c =false))</errorConditionFormula>
        <errorDisplayField>Extranet_Role__c</errorDisplayField>
        <errorMessage>Extranet Role must correspond to Account:
- Customer User  only for Comapny or Residential
- Partner Dealer User only for Partner and chekbox Dealer set to true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>asst_phone_number</fullName>
        <active>false</active>
        <errorConditionFormula>!BEGINS(  AssistantPhone , &quot;+&quot;)</errorConditionFormula>
        <errorDisplayField>AssistantPhone</errorDisplayField>
        <errorMessage>Phone number should start with &quot;+&quot; and be in international format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fax_number</fullName>
        <active>false</active>
        <errorConditionFormula>!BEGINS(  Fax , &quot;+&quot;)</errorConditionFormula>
        <errorDisplayField>Fax</errorDisplayField>
        <errorMessage>Fax number should start with &quot;+&quot; and be in international format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mobile_phone_number</fullName>
        <active>false</active>
        <errorConditionFormula>!BEGINS(  MobilePhone , &quot;+&quot;)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Phone number should start with &quot;+&quot; and be in international format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>phone_number</fullName>
        <active>false</active>
        <errorConditionFormula>!BEGINS( Phone , &quot;+&quot;)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone number should start with &quot;+&quot; and be in international format.</errorMessage>
    </validationRules>
</CustomObject>